--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@pinia/nuxt": "^0.5.1",
     "axios": "^1.5.1",
     "components": "^0.1.0",
     "default": "^0.1.1",
@@ -34,7 +35,7 @@
     "layout": "^2.2.0",
     "nuxt": "^3.7.4",
     "page": "^1.11.6",
-    "pusher-js": "^8.3.0",
+    "pusher-js": "^7.5.0",
     "vuex-persistedstate": "^4.1.0"
   },
   "description": "Look at the [Nuxt 3 documentation](https://nuxt.com/docs/getting-started/introduction) to learn more.",
